--- a/html/artistas.html
+++ b/html/artistas.html
@@ -65,7 +65,7 @@
     <main>
 
         <section class="title">
-            <div class="text flex">
+            <div class="text">
                 <h2>Conheça os maiores artistas de todos os tempos em um só lugar</h2>
             </div>
         </section>
@@ -91,7 +91,7 @@
                 <ul>
                     <li class="mov-card">
                         <div class="mov-foto">
-                            <img src="../img/paintings/gogh-auto-retrato.jpg" alt="">
+                            <img src="../img/paintings/Leonardo-da-Vinci.jpg">
                             <div class="mov-nome">
                                 <h3>Top Artistas</h3>
                             </div>
@@ -99,7 +99,7 @@
                     </li>
                     <li class="mov-card">
                         <div class="mov-foto">
-                            <img src="../img/paintings/susano-correia.jpg" alt="">
+                            <img src="../img/paintings/susano-correia.jpg">
                             <div class="mov-nome">
                                 <h3>Artistas Revelação</h3>
                             </div>
@@ -107,7 +107,7 @@
                     </li>
                     <li class="mov-card">
                         <div class="mov-foto">
-                            <img src="../img/paintings/tarsila-do-amaral.jpg" alt="">
+                            <img src="../img/paintings/tarsila-do-amaral.jpg">
                             <div class="mov-nome">
                                 <h3>Artistas Nacionais</h3>
                             </div>
