--- a/html/obras.html
+++ b/html/obras.html
@@ -65,7 +65,7 @@
     <main>
 
         <section class="title">
-            <div class="text flex">
+            <div class="text">
                 <h2>Explore as maiores obras de todos os tempos em um só lugar</h2>
             </div>
         </section>
@@ -93,7 +93,7 @@
                         <div class="mov-foto">
                             <img src="../img/paintings/grego-aquiles-ajax-jogando-damas.jpg" alt="">
                             <div class="mov-nome">
-                                <h3>Arte Clássica</h3>
+                                <h3>Arte na Antiguidade Clássica</h3>
                             </div>
                         </div>
                     </li>
@@ -101,15 +101,15 @@
                         <div class="mov-foto">
                             <img src="../img/paintings/melozzo-da-forli-anjo.jpg" alt="">
                             <div class="mov-nome">
-                                <h3>Arte Medieval</h3>
+                                <h3>Arte na Idade Média</h3>
                             </div>
                         </div>
                     </li>
                     <li class="mov-card">
                         <div class="mov-foto">
-                            <img src="../img/paintings/munch-the-scream-corte.jpg" alt="">
+                            <img src="../img/paintings/michelangelo-criacao-adao.jpg" alt="">
                             <div class="mov-nome">
-                                <h3>Arte Moderna</h3>
+                                <h3>Arte na Idade Moderna</h3>
                             </div>
                         </div>
                     </li>
@@ -117,7 +117,7 @@
                         <div class="mov-foto">
                             <img src="../img/paintings/picasso-guernica.jpg" alt="">
                             <div class="mov-nome">
-                                <h3>Arte Contemporânea</h3>
+                                <h3>Arte na Idade Contemporânea</h3>
                             </div>
                         </div>
                     </li>
