--- a/html/obras.html
+++ b/html/obras.html
@@ -41,7 +41,7 @@
                             <a href="../index.html">Início</a>
                         </li>
                         <li>
-                            <a href="obras.html">Obras</a>
+                            <a href="obras.html" class="page_atual">Obras</a>
                         </li>
                         <li>
                             <a href="artistas.html">Artistas</a>
@@ -66,7 +66,7 @@
 
         <section class="title">
             <div class="text">
-                <h2>Explore as maiores obras de todos os tempos em um só lugar</h2>
+                <h2 data-digita> Explore as maiores obras de todos os tempos em um só lugar</h2>
             </div>
         </section>
 
@@ -89,7 +89,7 @@
                 <h2>OBRAS POR PERÍODO HISTÓRICO</h2>
                 <hr>
                 <ul>
-                    <li class="mov-card">
+                    <li class="mov-card" data-anime="left">
                         <div class="mov-foto">
                             <img src="../img/paintings/grego-aquiles-ajax-jogando-damas.jpg" alt="">
                             <div class="mov-nome">
@@ -97,7 +97,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="mov-card">
+                    <li class="mov-card" data-anime="left">
                         <div class="mov-foto">
                             <img src="../img/paintings/melozzo-da-forli-anjo.jpg" alt="">
                             <div class="mov-nome">
@@ -105,7 +105,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="mov-card">
+                    <li class="mov-card" data-anime="left">
                         <div class="mov-foto">
                             <img src="../img/paintings/michelangelo-criacao-adao.jpg" alt="">
                             <div class="mov-nome">
@@ -113,7 +113,7 @@
                             </div>
                         </div>
                     </li>
-                    <li class="mov-card">
+                    <li class="mov-card" data-anime="left">
                         <div class="mov-foto">
                             <img src="../img/paintings/picasso-guernica.jpg" alt="">
                             <div class="mov-nome">
@@ -235,7 +235,7 @@
     <div id="modal-login" class="modal-container flex">
         <div class="modal">
             <button class="fechar">X</button>
-            <h3>Login</h3>
+            <h2>Login</h2>
             <img src="../img/palette.png" alt="tela">
             <form>
                 <input type="text" class="input" placeholder="E-mail">
@@ -253,23 +253,26 @@
     <div id="modal-cadastro" class="modal-container flex">
         <div class="modal register">
             <button class="fechar">X</button>
-            <h3>Faça parte da comunidade Colorful Art</h3>
+            <h2>Faça parte da comunidade Colorful Art</h2>
             <img src="../img/tela.png" alt="paleta">
             <form>
-                <input type="text" class="input" placeholder="Seu nome">
+                <input type="text" class="input" placeholder="Seu nome" id="valida_nome">
                 <div class="border-input"></div>
-                <input type="text" class="input" placeholder="Seu e-mail">
-                <div class="border-input"></div>
-                <input type="password" class="input" placeholder="Crie uma senha">
-                <div class="border-input"></div>
-                <input type="password" class="input" placeholder="Confirmar senha">
-                <div class="border-input"></div>
-                <button class="enter">CADASTRAR-SE</button>
+                <input type="text" class="input" placeholder="Seu e-mail" id="valida_email" onkeyup="validacao_email()">
+                <div class="border-input" id="mensagem_email"></div>
+                <input type="password" class="input" placeholder="Crie uma senha" id="valida_senha"
+                    onkeyup="validacao_senha()">
+                <div class="border-input" id="mensagem_senha1"></div>
+                <input type="password" class="input" placeholder="Confirmar senha" id="confirma_senha">
+                <div class="border-input" id="mensagem_senha2"></div>
+                <button class="enter" onclick="cadastrar()">CADASTRAR-SE</button>
             </form>
         </div>
     </div>
 
+
     <script src="../js/modal.js"></script>
+    <script src="../js/animacoes.js"></script>
 
 </body>
 
